# csnip

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
.github/workflows/: cmake.yml
cmake/: BuildDirSetup.cmake  CxxSetup.cmake  DoxySetup.cmake  EnableWarnings.cmake  InstallSetup.cmake  Packaging.cmake  Symbols.cmake
doc/: CMakeLists.txt  mainpage.md
examples/: CMakeLists.txt  clopts.c  coro.c  coro_perf.c  dlist.c  find.cc  fmt.c  getopt.c  meanvar.c  search.cc  sort_cmdline.c  sort_perf.cc  toy_printf.c
in/: CMakeLists.txt  csnip.pc.in  csnipConfig.cmake.in
src/: CMakeLists.txt
src/csnip/: CMakeLists.txt  arr.h  arrt.h  cext.h  clopts.c  clopts.h  coro.c  coro.h  coro_pth.c  coro_pth.h  coro_uctx.c  coro_uctx.h  csnip_conf.h.in  err.c  err.h  find.h  fmt.h  fnv_hash.c  hash.h  heap.h  limits.h  list.h  log.c  log.h  lphash.h  lphash_table.h  meanvar.c  meanvar.h  mem.c  mem.h  mempool.h  podtypes.h  preproc.h  ringbuf.h  ringbuf2.c  ringbuf2.h  rng.c  rng.h  rng_mt.c  rng_mt.h  (+12 more)
src/csnip/x/: asprintf.c  clock_gettime.c  fopencookie.c  getdelim.c  getline.c  getopt.c  readv.c  strerror_r.c  strtok_r.c  writev.c
test/: CMakeLists.txt  arr_test0.c  arr_test1.c  arrt_test0.c  arrt_test1.c  cext_test0.c  clopts_test0.c  coro_test.c  coro_test1.c  err_test0.c  err_test1.c  fmt_test0.c  fnv_hash_test.c  hashtable_test0.c  hashtable_test1.c  heap_test.c  limits_test.c  list_test0.c  log_test0.c  log_test1.c  meanvar_test0.c  meanvar_test0_cxx.cc  mem_test0.c  mem_test0_cxx.cc  mem_test1.c  mempool_test0.c  ringbuf2_test.c  ringbuf_test.c  rng_mt_test.c  rng_mt_test_expected.txt  runif_getf_test.c  runif_geti_test.c  search_test.c  time_test1.c  util_test0.c  x_asprintf_test.c  x_fopencookie_test.c  x_getdelim_test0.c  x_getopt_test0.c  x_readv_test0.c  (+2 more)
